styles.css
/* ================================= 
  Base Layout Styles
==================================== */

* {
    box-sizing: border-box;
}

/* =================================
---- Header CSS ---- 
====================================*/
header {
    display: flex;
    flex-direction: column;
    background-color: rgb(31, 46, 46);
    width: 100%;
   }  

.name {
    margin: auto;
    color: whitesmoke;
    }

.main-nav {
    display: flex;
    justify-content: space-evenly;
    flex-direction: column;
    padding: 0;
}

.main-nav li {
    list-style-type: none;
    margin: 0 auto;
        }
.main-nav a {
    text-decoration: none;
    text-transform: uppercase;
    color: black;
    }
   
/* =================================
---- Body CSS ---- 
====================================*/

body {
    display: flex;
    align-items: center;
    flex-direction: column;
    min-height: 100vh;
    background-color: rgb(136, 154, 172);
}

.container {
    margin-top: 2em;
}

.wes,
.michael { 
    text-align: center;
}

.sticky-footer {
    flex: 1;
}
.about_col {
    position: relative;
    z-index: 1;
}

.about_col .bg{
    position: absolute;
    z-index: -1;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background: url("images/cogs.jpg") center center;
    opacity: 0.2;
    width: 100%;
    height: 100%;
 }

 .about_col h1 {
    font-weight: bold;
    padding-left: .5em;
    padding-top: .5em;
 }
 .about_col p {
    font-weight: bold;
    padding: 1em;
 }

img {
    border-radius: 10px;
}

/* ================================= 
  For javascript with modal
==================================== */
.hidden {
    display: none;
}

/* ================================= 
  Media Queries
==================================== */

@media only screen and (min-width: 769px) {
    header {
        display: flex;
        flex-direction: row;
        width: 100%;
       }
       
    .main-header {
        background-image: url("images/golem2.jpg");
    }

    .hamburger_nav {
        display: none;
    }
    
    body {
        display: flex;
        flex-direction: column;
        min-height: 100vh;
    }

    .container {
        display: flex;       
        justify-content: space-around;
    }
    .wes {
        
    }
    
    .wes,
    .michael {
        flex-direction: row; 
    }

    .name {
      margin-left: 1em;
    }
        
    .main-nav {
        display: flex;
        flex-direction: row;
        }   
        
    .main-nav li {
            margin-top: 1em;
            border: solid white;           
            border-radius: 3px;
            background-color: white;
            margin-right: 1em;
            max-height: 30px;
            opacity: .5;
        }
        
   .main-nav a {
        padding: 1em;
        font-weight: bold;
           
    }

    .content_col {
        -webkit-column-count: 2;
        -moz-column-count: 2;
        column-count: 2;  
    }

    .about_col p {
        padding: 0 1em;
     
     }

}

@media only screen and (min-width: 1025px) {

    header {
        background-color: yellow;
    }

    .content_col {
        -webkit-column-count: 3;
        -moz-column-count: 3;
        column-count: 3;  
    }
}

